@@ -2,15 +2,13 @@
 Hash: SHA256
 
 DIST Exporter-Tiny-0.042.tar.gz 32173 SHA256 8f1622c5ebbfbcd519ead81df7917e48cb16cc527b1c46737b0459c3908a023f SHA512 b69b722842b4a907fa434a1a798df6f983bae74d7b82e925a1db684cb166f2ef02a72cce176173af035321dc27ad35b49e1fb1ee57c0e2ca6596d84da140c06f WHIRLPOOL 9b43e4b2ca3d0ce6dfc4333914e340e10da032fab8535fb208bf2a4e79e7d4e26b46b09cbf178bdf31eba3584169316fe44ec6ce5c14405d4648d91e60a46f61
-EBUILD Exporter-Tiny-0.42.0.ebuild 611 SHA256 94c298c5e8c1cc41ca2cf82cefa8b0d65b187c544bdbfd2f585ba24b86246cdc SHA512 4bcea9916df1a1c41bce8d32c1d703483bc022db86749a85e5b992bae73b4c7d029e871a515c67b5b325d13ee925cb6b0dd578cde047ff68dd17a8d032e0be4f WHIRLPOOL c132ddfd7b533580f865450101078dfa8af45a55bf53230fbe6d52f178cdf1dad8e02b3155b594cdb02fe89ab31de3dacef69abae769f568db716a6a09d0ce5d
-MISC ChangeLog 1309 SHA256 0cf9d7226e09b8948f9566bbc2e7201f80bf642d0b2ec3d5b03604b3178b6aae SHA512 f730082ecd54a34c2bbe911f4a005a4878daeb43cd291a6c6f3c44b34e10eb5bf945126fa2000b4f5316be85c87fb6b387a00abc8052cf04e28347023c3af25c WHIRLPOOL 91111555bd758d34dead43b317dfc7d2950a776fafb5edde88bf843a34eec010dc0cc1f04bf5237a4fc8fe9297c1da7f0fca1506d2bc7aea4c92792ca0f22485
+EBUILD Exporter-Tiny-0.42.0.ebuild 615 SHA256 808fd0f5307547072bc826bbb195840251d26d3a19a3aef3aead2e7452109d1a SHA512 a06d58b02b5c7cf3d78d8734b9d69634d5f5d1e385699424cb12890aca805c956074e300fa9690ad5255f85b888598d1ac554da908856652bfb3a6e2c5002a3c WHIRLPOOL 3b9fc5a9bc576fefc53091e1306b3c5ba7f588f6ad029ffd2eeedb5d9dfb708d1969b1301793b5ef57adcc42354628692d2fd49f3f82a048772751d60565f538
+MISC ChangeLog 1412 SHA256 e2e0485d1dabecf999f74777300dc2461d2072e8a42b175f275bf4d02f2fcaf2 SHA512 26686f931385066714594833465089810ad8f1dbde828dd7806bb04bbd33a6e3cfbffb4f4d64b9727f96ff1f444228001f1be3f911fbee157f663dcaea1483a1 WHIRLPOOL 871117acd7b519bb521c0ca74b0f088d8aa8ec273add2db08a585a402465050085c971718f9237aa7e44a219ec40595f890444307da14a26f5c9d792189675cc
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlUqb6AACgkQG9wOWsQutdZmpgQAgCfNyVg+qpv7AnWD0os8Y3tY
-jwp2K6oj/qSYA03VWLZS19A/fwPgfV1dWEQxOlRhnAiHIeWYQ9kzDwa6WXtYhGxs
-FqrPJQkjhdJpo64GAODZamEp8n9CYpQQELHIeZjNPoPDStFKTZgDvNZUMxChxpzn
-fq5RXrM2dx8Eu5yla6M=
-=s8Lf
+iEYEAREIAAYFAlVQOxEACgkQVWmRsqeSphPttACfZ8g33AaH5X5UCJnd+W4z1aYy
+7OUAn34AvTV9sUl0S5LF9PDVqPILK5vR
+=+eMA
 -----END PGP SIGNATURE-----
