@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/mechanize-2.7.3-r1.ebuild,v 1.2 2015/05/03 06:50:52 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/mechanize-2.7.3-r1.ebuild,v 1.3 2015/05/11 05:03:05 jer Exp $
 
 EAPI=5
 
@@ -17,7 +17,7 @@ HOMEPAGE="https://github.com/sparklemotion/mechanize"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE=""
 
 ruby_add_bdepend ">=dev-ruby/hoe-3.7
