@@ -4,10 +4,10 @@ DESCRIPTION=An exporter with the features of Sub::Exporter but only core depende
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/Exporter-Tiny/
 IUSE=test
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~mips ~ppc ~s390 ~sh ~x86
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~mips ~ppc ~ppc64 ~s390 ~sh ~x86
 LICENSE=|| ( Artistic GPL-1+ )
 RDEPEND=dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/T/TO/TOBYINK/Exporter-Tiny-0.042.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=1eefbcfe704cfe7f49870a01e68e565a
+_md5_=5f76887e213a9560aaa969dac0836bfd
