@@ -4,10 +4,10 @@ DESCRIPTION=Provide the missing functionality from List::Util
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/List-MoreUtils/
 IUSE=test
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~mips ~s390 ~sh ~x86
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~mips ~ppc64 ~s390 ~sh ~x86
 LICENSE=|| ( Artistic GPL-1+ )
 RDEPEND=>=dev-perl/Exporter-Tiny-0.38.0 virtual/perl-XSLoader dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/R/RE/REHSACK/List-MoreUtils-0.408.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=523020c4a22a98249a22a284ff7c26f2
+_md5_=95227bd8cd9d6c327cfda9396f85a587
