@@ -4,11 +4,11 @@ DESCRIPTION=A Ruby library used for automating interaction with websites
 EAPI=5
 HOMEPAGE=https://github.com/sparklemotion/mechanize
 IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 doc test test
-KEYWORDS=amd64 ~ppc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=amd64 ~ppc ~ppc64 x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/nokogiri-1.4.4-r1[ruby_targets_ruby19] >=dev-ruby/net-http-digest_auth-1.1.1[ruby_targets_ruby19] >=dev-ruby/net-http-persistent-2.5.2[ruby_targets_ruby19] >=dev-ruby/ntlm-http-0.1.1[ruby_targets_ruby19] >=dev-ruby/webrobots-0.0.9[ruby_targets_ruby19] >=dev-ruby/http-cookie-1.0.2[ruby_targets_ruby19] >=dev-ruby/mime-types-2.0[ruby_targets_ruby19] >=dev-ruby/domain_name-0.5.1[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/nokogiri-1.4.4-r1[ruby_targets_ruby20] >=dev-ruby/net-http-digest_auth-1.1.1[ruby_targets_ruby20] >=dev-ruby/net-http-persistent-2.5.2[ruby_targets_ruby20] >=dev-ruby/ntlm-http-0.1.1[ruby_targets_ruby20] >=dev-ruby/webrobots-0.0.9[ruby_targets_ruby20] >=dev-ruby/http-cookie-1.0.2[ruby_targets_ruby20] >=dev-ruby/mime-types-2.0[ruby_targets_ruby20] >=dev-ruby/domain_name-0.5.1[ruby_targets_ruby20] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] )
 REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 )
 SLOT=0
 SRC_URI=mirror://rubygems/mechanize-2.7.3.gem
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	f7dce580d4098b526be3fa17d4242820	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=4c69a237c66572ac5e78ad3a01285762
+_md5_=33d6b8cdfb4899bbd1a996f16b801f7f
